// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance accent 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance basic 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose accent 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-j8au9m=""
    >
      <button
        aria-label="Close tooltip"
        data-css-4up60p=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose basic 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-3ikfuq=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1uhqcv0=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose short text 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-3ikfuq=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1uhqcv0=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Short
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose tailPosition topRight 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-3ikfuq=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1uhqcv0=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
      <div
        aria-hidden={true}
        data-css-5wh3fj=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomCenter 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1pbctcp=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomLeft 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1k62s61=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomRight 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1de95l2=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topCenter 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1ifp0wm=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topLeft 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1wbzblg=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topRight 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-18j5alm=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-7ye6f=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomCenter 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-cy4rwj=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomLeft 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-8tr9sl=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomRight 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-hs048c=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topCenter 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-15eem71=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topLeft 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1vlp377=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topRight 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1luw3o6=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-5wh3fj=""
      />
    </div>
  </div>
</div>
`;
